@@ -12,3 +12,7 @@
 > dateFormat(as.Date('2001-02-13'), '%Y.%02m.%02d')
 [1] "2001.02.13"
 > 
+> dateFormat(dateSeq('2001-01-01',by='months',len=12), '%Y%Q')
+ [1] "2001Q1" "2001Q1" "2001Q1" "2001Q2" "2001Q2" "2001Q2" "2001Q3" "2001Q3"
+ [9] "2001Q3" "2001Q4" "2001Q4" "2001Q4"
+>
